[package]
name = "gb-rust-libretro"
version = "0.1.0"
authors = ["Agi Sferro <agi.novanta@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
libretro-backend = { git = "https://github.com/agi90/libretro-backend" }
cpuprofiler = { version = "0.0.3", optional = true }
uuid = { version = "0.4", features = ["v4"], optional = true }

[dependencies.gb]
path = "../gb-rust-core"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[features]
profiler = ["cpuprofiler", "uuid"]
